refacto: use gsap to manage horizontal scroll, but there is an issue with the container width

--- a/globals.css
+++ b/globals.css
@@ -49,9 +49,9 @@ body {
     cursor: none;
 }
 
-*::-webkit-scrollbar {
+/* *::-webkit-scrollbar {
     display: none;
-}
+} */
 
 @layer utilities {
     .text-balance {
